<resources>
    <string name="app_name">ArchitectureDemo</string>
    <string name="default_loading_message">Loading...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="forgot_password">forgot password?</string>
    <string name="please_sign_in">Welcome!\nPlease select a method to sign in.</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="google">google</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_pw_disclaimer">We will send an email to the given address to reset your password.</string>
    <string name="reset_sent">Email sent</string>
    <string name="confirm_password">confirm password</string>
    <string name="registration_successful">Registered successfully, now you can sign in with your credentials</string>
    <string name="title_activity_check_user">CheckUserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="timezones">Timezones</string>
    <string name="admin">Admin</string>
    <string name="logout">Log out</string>
    <string name="logged_out">Logged out</string>
    <string name="users">Users</string>
    <string name="login_successful">Login successful</string>
    <string name="default_empty_message">Nothing to show</string>
    <string name="type_to_filter">Type to filter</string>
    <string name="hint_name">Name</string>
    <string name="hint_city">City</string>
    <string name="hint_difference">Difference to GMT</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
</resources>
