<?xml version="1.0" encoding="utf-8"?>
<hu.sztomek.archdemo.presentation.views.LoadingRetryView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lrv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:state="idle"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        tools:layout_editor_absoluteX="365dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        tools:layout_editor_absoluteX="19dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_description"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etCity"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/tvError"
        tools:layout_editor_absoluteY="131dp"
        tools:text="Name" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_place"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_city"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etDifference"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:layout_editor_absoluteY="177dp"
        tools:text="City" />

    <EditText
        android:id="@+id/etDifference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/ic_menu_tz"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_difference"
        android:inputType="textPersonName|numberSigned|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/etCity"
        tools:text="-1" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        tools:text="Submit" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_rounded_red"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        tools:text="delete" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteY="100dp"
        tools:text="Error" />
</hu.sztomek.archdemo.presentation.views.LoadingRetryView>